# mylearning-opengl

./: .gitignore  README.md
01/: Makefile  glad.c  main  main.cpp
02/: Makefile  main.cpp
03/: main.cpp
03_2/: glad.c  main.cpp
03_3/: main.cpp  shader.vs
04/: Makefile  main.cpp  shader.fs
04/include/glad/: glad.h
04_2/: CMakeLists.txt  main.cpp  shader.fs
04_2/include/: shader_s.h
04_2/lib/: glfw3.lib
